Code base for second forum release, labeled 0.92
Many code cleanups.
Changed handler routine from active polling to listen mode.

--- a/MogaSerial/MogaSerial.vcxproj
+++ b/MogaSerial/MogaSerial.vcxproj
@@ -79,6 +79,7 @@
     <None Include="moga.ico" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="MogaSerial.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
