--- a/MogaSerial/MogaSerial.vcxproj.filters
+++ b/MogaSerial/MogaSerial.vcxproj.filters
@@ -23,6 +23,9 @@
     <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MogaSerial.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MogaSerial.cpp">
