Tweaking some icons to look a bit nicer for larger buttons.

--- a/MogaSerial_MFC/MogaSerial_MFC.vcxproj.filters
+++ b/MogaSerial_MFC/MogaSerial_MFC.vcxproj.filters
@@ -45,6 +45,18 @@
     <None Include="res\597001.bmp">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="res\about.png">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="res\debug.png">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="res\debug2.png">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="res\debugon.png">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MogaSerial.h">
