--- a/MogaSerial/MogaSerial.vcxproj
+++ b/MogaSerial/MogaSerial.vcxproj
@@ -54,7 +54,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>ws2_32.lib;vJoyInterface.lib</AdditionalDependencies>
+      <AdditionalDependencies>ws2_32.lib;Setupapi.lib;Xinput.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -72,7 +72,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>ws2_32.lib;vJoyInterface.lib</AdditionalDependencies>
+      <AdditionalDependencies>ws2_32.lib;Setupapi.lib;Xinput.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
